<resources>
    <string name="app_name">Pozivi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">matevz.pivk@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">Ni pozivov!</string>
    <string name="lbl_new_note_title">Nov prožilec</string>
    <string name="lbl_edit_note_title">Popravi prožilec</string>
    <string name="lbl_edit_callbacknote_title">Popravi številko</string>
    <string name="hint_enter_note">Dodaj ime prožilca</string>
    <string name="prozilci_no_notes">Ni prožilcev!</string>
    <string name="hint_enter_note_name">Dodaj ime prožilca</string>
    <string name="hint_enter_note_number">Dodaj številko prožilca</string>
    <string name="main_app_name">Pozivnik</string>
    <string name="sporzilci_app_name">Prožilci</string>
    <string name="new_alert">Poziv</string>
    <string name="callbacknumber_no_notes">Ni številk!</string>
    <string name="settings">Nastavitve</string>
    <string name="nastavitve_tevilk_za_javljanje">Nastavitve številk za javljanje</string>
    <string name="nastavitve_zvonenja">NASTAVITVE ZVONJENJA</string>
    <string name="Siren">Sirena</string>
    <string name="runningBackground">se izvaja v  ozadju</string>
    <string name="appwidget_text">Aktivno</string>
    <string name="add_widget">Aktivno</string>
    <string name="SpinRSS">Spin RSS</string>
    <string name="NoConnection">Ni internetne povezave!</string>
    <string name="NoConnectionMessage">Za dostop do RSS novic potrebujete MOBILNE PODATKE ali WIFI povezavo.</string>
    <string name="filter_hint">Beseda 1; Beseda 2; MAX 10…</string>
    <string name="nastavitve">Nastavitve</string>
    <string name="prozilci">Prožilci</string>
    <string name="spin_rss">Spin RSS</string>
    <string name="intervencije_net">Intervencije.NET</string>
    <string name="test">TEST</string>
    <string name="resetiraj_nastavitve">RESETIRAJ NASTAVITVE</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="trenutno_zvonjenje">Trenutno zvonjenje:</string>
    <string name="glasnost_zvonjenja">Glasnost zvonjenja:</string>
    <string name="zvonenje_v_tihem_na_inu">Zvonenje v tihem načinu</string>
    <string name="as_zvonenja_s">Čas zvonenja (s):</string>
    <string name="as_v_sekundah">Čas v sekundah</string>
    <string name="_60">60</string>
    <string name="spremeni_zvonjenje">SPREMENI ZVONJENJE</string>
    <string name="osnovno_zvonjenje">OSNOVNO ZVONJENJE</string>
    <string name="dodaj_nov_pro_ilec">Dodaj nov prožilec</string>
</resources>
