<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="8sp"
        android:padding="@dimen/dimen_10"
        android:text="@string/lbl_new_note_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_note_name"
        android:inputType="text"
        android:lines="4"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/note_list_text"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_note_number"
        android:inputType="text"
        android:lines="4"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/note_list_text"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/tvFilterIncludes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:text="SMS vsebuje"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etFilterIncludes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/filter_hint"
        android:inputType="text"
        android:lines="4"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/note_list_text"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

    <TextView
        android:id="@+id/tvFilterExcludes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_10"
        android:text="SMS ne vsebuje"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/etFilterExcludes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/filter_hint"
        android:inputType="text"
        android:lines="4"
        android:padding="@dimen/dimen_10"
        android:textColor="@color/note_list_text"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

</LinearLayout>